Remove all reference to Mork Borg

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,232 +1,232 @@
 {
-  "MB.Abilities": "Abilities",
-  "MB.AbilityAgility": "Agility",
-  "MB.AbilityAgilityAbbrev": "AGI",
-  "MB.AbilityPresence": "Presence",
-  "MB.AbilityPresenceAbbrev": "PRE",
-  "MB.AbilityStrength": "Strength",
-  "MB.AbilityStrengthAbbrev": "STR",
-  "MB.AbilityToughness": "Toughness",
-  "MB.AbilityToughnessAbbrev": "TOU",
-  "MB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
-  "MB.Add": "Add",
-  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
-  "MB.AllowedScvmClassesSelect": "Select allowed classes",
-  "MB.AlternateName": "Alternate Name",
-  "MB.Armor": "Armor",
-  "MB.ArmorCurrentTier": "Current Tier",
-  "MB.ArmorMaxTier": "Max Tier",
-  "MB.ArmorTable": "Armor Table",
-  "MB.ArmorTierHeavy": "Heavy",
-  "MB.ArmorTierLight": "Light",
-  "MB.ArmorTierMedium": "Medium",
-  "MB.ArmorTierNone": "None",
-  "MB.Attack": "Attack",
-  "MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
-  "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
-  "MB.Base": "Base",
-  "MB.Broken": "Broken",
-  "MB.BrokenFallUnconscious": "Fall unconscious for {rounds} {roundsWord}, awaken with {hp} HP.",
-  "MB.BrokenLostEye": "Lost eye. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
-  "MB.BrokenHemorrhage": "Hemorrhage: dead in {hours} {hoursWord} unless treated. All tests are DR16 the first hour. {lastHour}",
-  "MB.BrokenHemorrhageLastHour": "DR18 the last hour",
-  "MB.BrokenSeveredLimb": "Broken or severed limb. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
-  "MB.BrokenYouAreDead": "You are dead.",
-  "MB.Cancel": "Cancel",
-  "MB.CarryWeight": "Carry Weight",
-  "MB.Carrying": "Carrying",
-  "MB.CarryingCapacity": "Carrying Capacity",
-  "MB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
-  "MB.CarryingRuleNoPenalty": "STR+8 max carried items.",
-  "MB.Class": "Class",
-  "MB.ClassAbilities": "Abilities",
-  "MB.ContainerEmptyHelpText": "Drag items into this container.",
-  "MB.ContainerHolding": "Holding",
-  "MB.ContainerSpace": "Container Space",
-  "MB.CreateNewItem": "Create New Item",
-  "MB.CreatureArmor": "Armor",
-  "MB.CreatureAttack": "Attack",
-  "MB.CreatureSpecial": "Special",
-  "MB.CriticalSuccess": "Critical Success",
-  "MB.Damage": "damage",
-  "MB.DamageDie": "Damage Die",
-  "MB.DamageReduction": "Damage Reduction",
-  "MB.DamageReductionDie": "Damage Reduction Die",
-  "MB.Defend": "Defend",
-  "MB.DefendCritText": "Crit: Gain free attack.",
-  "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
-  "MB.Description": "Description",
-  "MB.Dice": "Dice",
-  "MB.Dodge": "Dodge",
-  "MB.DR": "DR",
-  "MB.EditAllowedScvmClassesMenu": "Allowed classes",
-  "MB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
-  "MB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
-  "MB.Encumbered": "Encumbered",
-  "MB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
-  "MB.EquipAWeaponToAttack": "Equip a weapon to attack.",
-  "MB.Equipment": "Equipment",
-  "MB.Failure": "Failure",
-  "MB.FollowerSpeciality": "Speciality",
-  "MB.FollowerTrait": "Trait",
-  "MB.FollowerValue": "Value",
-  "MB.GetBetter": "Get Better",
-  "MB.HandedOne": "One-handed",
-  "MB.HandedTwo": "Two-handed",
-  "MB.Heal": "Heal",
-  "MB.Hit": "HIT",
-  "MB.HitPoints": "Hit Points",
-  "MB.Hour": "hour",
-  "MB.Hours": "hours",
-  "MB.HP": "HP",
-  "MB.IncomingAttack": "Incoming Attack",
-  "MB.Individual": "Individual",
-  "MB.Infection": "Infection",
-  "MB.Initiative": "Initiative",
-  "MB.InitiativeEnemiesBegin": "Enemies Begin",
-  "MB.InitiativePlayerCharactersBegin": "Player Characters Begin",
-  "MB.Is": "is",
-  "MB.Inflict": "Inflict",
-  "MB.Items": "Items",
-  "MB.ItemAgilityDRModifier": "Agility DR Modifier",
-  "MB.ItemCapacity": "Capacity",
-  "MB.ItemCarried": "Carried",
-  "MB.ItemCreate": "Create Item",
-  "MB.ItemCritOn": "Crit On",
-  "MB.ItemDamageDie": "Damage Die",
-  "MB.ItemDamageReductionDie": "Damage Reduction Die",
-  "MB.ItemDefenseDRModifier": "Defense DR Modifier",
-  "MB.ItemDelete": "Delete Item",
-  "MB.ItemDeleteMessage": "Are you sure you want to delete the container and all the items?",
-  "MB.ItemDropped": "Dropped",
-  "MB.ItemEdit": "Edit Item",
-  "MB.ItemEquipped": "Equipped",
-  "MB.ItemFumbleOn": "Fumble On",
-  "MB.ItemHanded": "Handed",
-  "MB.ItemName": "Item Name",
-  "MB.ItemPrice": "Price",
-  "MB.ItemScrollType": "Scroll Type",
-  "MB.ItemTypeAmmo": "Ammo",
-  "MB.ItemTypeArmor": "Armor",
-  "MB.ItemTypeArmorPlural": "Armor",
-  "MB.ItemTypeClass": "Class",
-  "MB.ItemTypeContainer": "Container",
-  "MB.ItemTypeFeat": "Feat",
-  "MB.ItemTypeMisc": "Misc",
-  "MB.ItemTypeScroll": "Scroll",
-  "MB.ItemTypeScrollPlural": "Scrolls",
-  "MB.ItemTypeShield": "Shield",
-  "MB.ItemTypeWeapon": "Weapon",
-  "MB.ItemTypeWeaponPlural": "Weapons",
-  "MB.ItemUnequipped": "Unequipped",
-  "MB.ItemUsesAmmo": "Uses Ammo",
-  "MB.ItemWeaponType": "Weapon Type",
-  "MB.Miseries": "Miseries",
-  "MB.Miss": "MISS",
-  "MB.Modified": "Modified",
-  "MB.Morale": "Morale",
-  "MB.MoraleFlees": "Flees",
-  "MB.MoraleSurrenders": "Surrenders",
-  "MB.Name": "Name",
-  "MB.NoActiveEncounter": "No Active Encounter",
-  "MB.NoEffect": "No effect",
-  "MB.NoPowerUsesRemaining": "No Power uses remaining",
-  "MB.Ok": "Ok",
-  "MB.Omens": "Omens",
-  "MB.OmensHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
-  "MB.Outcome": "Outcome",
-  "MB.Party": "Party",
-  "MB.PartyInitiative": "Party Initiative",
-  "MB.PerDay": "Per Day",
-  "MB.PerRest": "Per Rest",
-  "MB.RollMacro": "Roll Macro",
-  "MB.Powers": "Powers",
-  "MB.PowersPerDayText": "PRE+d4 times per day",
-  "MB.PowerUsesRemaining": "Uses Remaining",
-  "MB.Quantity": "Quantity",
-  "MB.Reaction": "Reaction",
-  "MB.ReactionAlmostFriendly": "Almost friendly",
-  "MB.ReactionAngered": "Angered",
-  "MB.ReactionHelpful": "Helpful",
-  "MB.ReactionIndifferent": "Indifferent",
-  "MB.ReactionKill": "Kill!",
-  "MB.Rest": "Rest",
-  "MB.RestDialogDontEat": "Don't eat - Restore no stats.",
-  "MB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
-  "MB.RestDialogFoodAndDrink": "Food and Drink",
-  "MB.RestDialogInfected": "Infected - Restore no stats, lose d6 HP per day.",
-  "MB.RestDialogLength": "Rest Length",
-  "MB.RestDialogLengthLong": "Long - Full night's sleep. Restore d6 HP, regain Omens if depleted, regain PRE+d4 Power uses for the day.",
-  "MB.RestDialogLengthShort": "Short - Catch your breath, have a drink. Restore d4 HP.",
-  "MB.RestDialogStarve": "Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.",
-  "MB.Roll": "Roll",
-  "MB.Rolls": "Rolls",
-  "MB.RollFormula": "Roll Formula",
-  "MB.RollLabel": "Roll Label",
-  "MB.RollPartyInitiative": "Roll Party Initiative",
-  "MB.Round": "round",
-  "MB.Rounds": "rounds",
-  "MB.ScrollTypeSacred": "Sacred Scroll",
-  "MB.ScrollTypeTablet": "Tablet of Ochre Obscurity",
-  "MB.ScrollTypeUnclean": "Unclean Scroll",
-  "MB.ScvmfactoryChooseFromClasses": "Choose from Classes",
-  "MB.ScvmfactoryMakeScvm": "Make Scvm",
-  "MB.ScvmfactoryToggleAll": "Toggle All",
-  "MB.ScvmfactoryToggleNone": "Toggle None",
-  "MB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
-  "MB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
-  "MB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
-  "MB.SettingsBlackletter": "Blackletter",
-  "MB.SettingsBlackOnWhiteBlack": "Black on white (black)",
-  "MB.SettingsBlackOnYellowWhite": "Black on yellow (white)",
-  "MB.SettingsColorScheme": "Color Scheme",
-  "MB.SettingsColorSchemeHint": "Choose a color scheme for the UI.",
-  "MB.SettingsFontScheme": "Font Scheme",
-  "MB.SettingsFontSchemeHint": "Choose a font scheme for the UI.",
-  "MB.SettingsFoundryDefault": "Foundry Default",
-  "MB.SettingsLegible": "Legible",
-  "MB.SettingsWhiteOnBlackPink": "White on black (pink)",
-  "MB.SettingsWhiteOnBlackWhite": "White on black (white)",
-  "MB.SettingsWhiteOnBlackYellow": "White on black (yellow)",
-  "MB.SettingsWhiteOnPinkWhite": "White on pink (white)",
-  "MB.SettingsTrackAmmo": "Track Ammo",
-  "MB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
-  "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
-  "MB.SheetClassContainer": "Default Mork Borg Container Sheet",
-  "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
-  "MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
-  "MB.Shield": "Shield",
-  "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
-  "MB.Silver": "Silver",
-  "MB.StandsFirm": "Stands firm",
-  "MB.Starting": "Starting",
-  "MB.Starvation": "Starvation",
-  "MB.Success": "Success",
-  "MB.TabContents": "Contents",
-  "MB.TabDescription": "Description",
-  "MB.TabDetails": "Details",
-  "MB.TabFeats": "Feats",
-  "MB.TabObituary": "Obituary",
-  "MB.TabPowers": "Powers",
-  "MB.TabTreasures": "Treasures",
-  "MB.TabViolence": "Violence",
-  "MB.Take": "Take",
-  "MB.TargetArmor": "Target Armor",
-  "MB.Test": "Test",
-  "MB.TheScvmfactory": "The Scvmfactory",
-  "MB.Tier": "Tier",
-  "MB.Title": "MÖRK BORG",
-  "MB.Type": "Type",
-  "MB.Vs": "vs",
-  "MB.WeaponTable": "Weapon Table",
-  "MB.WeaponTypeMelee": "Melee",
-  "MB.WeaponTypeRanged": "Ranged",
-  "MB.Wield": "Wield",
-  "MB.WieldAPower": "Wield a Power",
-  "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
-  "MB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
-  "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
-  "MB.YouAreHit": "You are Hit",
-  "MB.YouHaveNoFeats": "You have no Feats",
-  "MB.YouHaveNoScrolls": "You have no Scrolls"
+  "PB.Abilities": "Abilities",
+  "PB.AbilityAgility": "Agility",
+  "PB.AbilityAgilityAbbrev": "AGI",
+  "PB.AbilityPresence": "Presence",
+  "PB.AbilityPresenceAbbrev": "PRE",
+  "PB.AbilityStrength": "Strength",
+  "PB.AbilityStrengthAbbrev": "STR",
+  "PB.AbilityToughness": "Toughness",
+  "PB.AbilityToughnessAbbrev": "TOU",
+  "PB.ActorNotInEncounter": "This actor isn't part of the current coPBat encounter",
+  "PB.Add": "Add",
+  "PB.AllowedScvmClassesEdit": "Edit allowed classes",
+  "PB.AllowedScvmClassesSelect": "Select allowed classes",
+  "PB.AlternateName": "Alternate Name",
+  "PB.Armor": "Armor",
+  "PB.ArmorCurrentTier": "Current Tier",
+  "PB.ArmorMaxTier": "Max Tier",
+  "PB.ArmorTable": "Armor Table",
+  "PB.ArmorTierHeavy": "Heavy",
+  "PB.ArmorTierLight": "Light",
+  "PB.ArmorTierMedium": "Medium",
+  "PB.ArmorTierNone": "None",
+  "PB.Attack": "Attack",
+  "PB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
+  "PB.AttackFuPBleText": "FuPBle: Weapon breaks or is lost.",
+  "PB.Base": "Base",
+  "PB.Broken": "Broken",
+  "PB.BrokenFallUnconscious": "Fall unconscious for {rounds} {roundsWord}, awaken with {hp} HP.",
+  "PB.BrokenLostEye": "Lost eye. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
+  "PB.BrokenHemorrhage": "Hemorrhage: dead in {hours} {hoursWord} unless treated. All tests are DR16 the first hour. {lastHour}",
+  "PB.BrokenHemorrhageLastHour": "DR18 the last hour",
+  "PB.BrokenSeveredLiPB": "Broken or severed liPB. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
+  "PB.BrokenYouAreDead": "You are dead.",
+  "PB.Cancel": "Cancel",
+  "PB.CarryWeight": "Carry Weight",
+  "PB.Carrying": "Carrying",
+  "PB.CarryingCapacity": "Carrying Capacity",
+  "PB.CarryingRule": "STR+8 carried items or DR+2 on AGI/STR tests.",
+  "PB.CarryingRuleNoPenalty": "STR+8 max carried items.",
+  "PB.Class": "Class",
+  "PB.ClassAbilities": "Abilities",
+  "PB.ContainerEmptyHelpText": "Drag items into this container.",
+  "PB.ContainerHolding": "Holding",
+  "PB.ContainerSpace": "Container Space",
+  "PB.CreateNewItem": "Create New Item",
+  "PB.CreatureArmor": "Armor",
+  "PB.CreatureAttack": "Attack",
+  "PB.CreatureSpecial": "Special",
+  "PB.CriticalSuccess": "Critical Success",
+  "PB.Damage": "damage",
+  "PB.DamageDie": "Damage Die",
+  "PB.DamageReduction": "Damage Reduction",
+  "PB.DamageReductionDie": "Damage Reduction Die",
+  "PB.Defend": "Defend",
+  "PB.DefendCritText": "Crit: Gain free attack.",
+  "PB.DefendFuPBleText": "FuPBle: Take x2 damage, armor reduced one tier.",
+  "PB.Description": "Description",
+  "PB.Dice": "Dice",
+  "PB.Dodge": "Dodge",
+  "PB.DR": "DR",
+  "PB.EditAllowedScvmClassesMenu": "Allowed classes",
+  "PB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
+  "PB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
+  "PB.EncuPBered": "EncuPBered",
+  "PB.EquipArmorToAbsorb": "Equip armor to absorb damage.",
+  "PB.EquipAWeaponToAttack": "Equip a weapon to attack.",
+  "PB.Equipment": "Equipment",
+  "PB.Failure": "Failure",
+  "PB.FollowerSpeciality": "Speciality",
+  "PB.FollowerTrait": "Trait",
+  "PB.FollowerValue": "Value",
+  "PB.GetBetter": "Get Better",
+  "PB.HandedOne": "One-handed",
+  "PB.HandedTwo": "Two-handed",
+  "PB.Heal": "Heal",
+  "PB.Hit": "HIT",
+  "PB.HitPoints": "Hit Points",
+  "PB.Hour": "hour",
+  "PB.Hours": "hours",
+  "PB.HP": "HP",
+  "PB.IncomingAttack": "Incoming Attack",
+  "PB.Individual": "Individual",
+  "PB.Infection": "Infection",
+  "PB.Initiative": "Initiative",
+  "PB.InitiativeEnemiesBegin": "Enemies Begin",
+  "PB.InitiativePlayerCharactersBegin": "Player Characters Begin",
+  "PB.Is": "is",
+  "PB.Inflict": "Inflict",
+  "PB.Items": "Items",
+  "PB.ItemAgilityDRModifier": "Agility DR Modifier",
+  "PB.ItemCapacity": "Capacity",
+  "PB.ItemCarried": "Carried",
+  "PB.ItemCreate": "Create Item",
+  "PB.ItemCritOn": "Crit On",
+  "PB.ItemDamageDie": "Damage Die",
+  "PB.ItemDamageReductionDie": "Damage Reduction Die",
+  "PB.ItemDefenseDRModifier": "Defense DR Modifier",
+  "PB.ItemDelete": "Delete Item",
+  "PB.ItemDeleteMessage": "Are you sure you want to delete the container and all the items?",
+  "PB.ItemDropped": "Dropped",
+  "PB.ItemEdit": "Edit Item",
+  "PB.ItemEquipped": "Equipped",
+  "PB.ItemFuPBleOn": "FuPBle On",
+  "PB.ItemHanded": "Handed",
+  "PB.ItemName": "Item Name",
+  "PB.ItemPrice": "Price",
+  "PB.ItemScrollType": "Scroll Type",
+  "PB.ItemTypeAmmo": "Ammo",
+  "PB.ItemTypeArmor": "Armor",
+  "PB.ItemTypeArmorPlural": "Armor",
+  "PB.ItemTypeClass": "Class",
+  "PB.ItemTypeContainer": "Container",
+  "PB.ItemTypeFeat": "Feat",
+  "PB.ItemTypeMisc": "Misc",
+  "PB.ItemTypeScroll": "Scroll",
+  "PB.ItemTypeScrollPlural": "Scrolls",
+  "PB.ItemTypeShield": "Shield",
+  "PB.ItemTypeWeapon": "Weapon",
+  "PB.ItemTypeWeaponPlural": "Weapons",
+  "PB.ItemUnequipped": "Unequipped",
+  "PB.ItemUsesAmmo": "Uses Ammo",
+  "PB.ItemWeaponType": "Weapon Type",
+  "PB.Miseries": "Miseries",
+  "PB.Miss": "MISS",
+  "PB.Modified": "Modified",
+  "PB.Morale": "Morale",
+  "PB.MoraleFlees": "Flees",
+  "PB.MoraleSurrenders": "Surrenders",
+  "PB.Name": "Name",
+  "PB.NoActiveEncounter": "No Active Encounter",
+  "PB.NoEffect": "No effect",
+  "PB.NoPowerUsesRemaining": "No Power uses remaining",
+  "PB.Ok": "Ok",
+  "PB.Omens": "Omens",
+  "PB.OmensHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fuPBle",
+  "PB.Outcome": "Outcome",
+  "PB.Party": "Party",
+  "PB.PartyInitiative": "Party Initiative",
+  "PB.PerDay": "Per Day",
+  "PB.PerRest": "Per Rest",
+  "PB.RollMacro": "Roll Macro",
+  "PB.Powers": "Powers",
+  "PB.PowersPerDayText": "PRE+d4 times per day",
+  "PB.PowerUsesRemaining": "Uses Remaining",
+  "PB.Quantity": "Quantity",
+  "PB.Reaction": "Reaction",
+  "PB.ReactionAlmostFriendly": "Almost friendly",
+  "PB.ReactionAngered": "Angered",
+  "PB.ReactionHelpful": "Helpful",
+  "PB.ReactionIndifferent": "Indifferent",
+  "PB.ReactionKill": "Kill!",
+  "PB.Rest": "Rest",
+  "PB.RestDialogDontEat": "Don't eat - Restore no stats.",
+  "PB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
+  "PB.RestDialogFoodAndDrink": "Food and Drink",
+  "PB.RestDialogInfected": "Infected - Restore no stats, lose d6 HP per day.",
+  "PB.RestDialogLength": "Rest Length",
+  "PB.RestDialogLengthLong": "Long - Full night's sleep. Restore d6 HP, regain Omens if depleted, regain PRE+d4 Power uses for the day.",
+  "PB.RestDialogLengthShort": "Short - Catch your breath, have a drink. Restore d4 HP.",
+  "PB.RestDialogStarve": "Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.",
+  "PB.Roll": "Roll",
+  "PB.Rolls": "Rolls",
+  "PB.RollFormula": "Roll Formula",
+  "PB.RollLabel": "Roll Label",
+  "PB.RollPartyInitiative": "Roll Party Initiative",
+  "PB.Round": "round",
+  "PB.Rounds": "rounds",
+  "PB.ScrollTypeSacred": "Sacred Scroll",
+  "PB.ScrollTypeTablet": "Tablet of Ochre Obscurity",
+  "PB.ScrollTypeUnclean": "Unclean Scroll",
+  "PB.ScvmfactoryChooseFromClasses": "Choose from Classes",
+  "PB.ScvmfactoryMakeScvm": "Make Scvm",
+  "PB.ScvmfactoryToggleAll": "Toggle All",
+  "PB.ScvmfactoryToggleNone": "Toggle None",
+  "PB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
+  "PB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
+  "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
+  "PB.SettingsBlackletter": "Blackletter",
+  "PB.SettingsBlackOnWhiteBlack": "Black on white (black)",
+  "PB.SettingsBlackOnYellowWhite": "Black on yellow (white)",
+  "PB.SettingsColorScheme": "Color Scheme",
+  "PB.SettingsColorSchemeHint": "Choose a color scheme for the UI.",
+  "PB.SettingsFontScheme": "Font Scheme",
+  "PB.SettingsFontSchemeHint": "Choose a font scheme for the UI.",
+  "PB.SettingsFoundryDefault": "Foundry Default",
+  "PB.SettingsLegible": "Legible",
+  "PB.SettingsWhiteOnBlackPink": "White on black (pink)",
+  "PB.SettingsWhiteOnBlackWhite": "White on black (white)",
+  "PB.SettingsWhiteOnBlackYellow": "White on black (yellow)",
+  "PB.SettingsWhiteOnPinkWhite": "White on pink (white)",
+  "PB.SettingsTrackAmmo": "Track Ammo",
+  "PB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
+  "PB.SheetClassCharacter": "Default Mork Borg Character Sheet",
+  "PB.SheetClassContainer": "Default Mork Borg Container Sheet",
+  "PB.SheetClassCreature": "Default Mork Borg Creature Sheet",
+  "PB.SheetClassFollower": "Default Mork Borg Follower Sheet",
+  "PB.Shield": "Shield",
+  "PB.ShieldUseText": "-1 damage, or break to ignore one attack",
+  "PB.Silver": "Silver",
+  "PB.StandsFirm": "Stands firm",
+  "PB.Starting": "Starting",
+  "PB.Starvation": "Starvation",
+  "PB.Success": "Success",
+  "PB.TabContents": "Contents",
+  "PB.TabDescription": "Description",
+  "PB.TabDetails": "Details",
+  "PB.TabFeats": "Feats",
+  "PB.TabObituary": "Obituary",
+  "PB.TabPowers": "Powers",
+  "PB.TabTreasures": "Treasures",
+  "PB.TabViolence": "Violence",
+  "PB.Take": "Take",
+  "PB.TargetArmor": "Target Armor",
+  "PB.Test": "Test",
+  "PB.TheScvmfactory": "The Scvmfactory",
+  "PB.Tier": "Tier",
+  "PB.Title": "MÖRK BORG",
+  "PB.Type": "Type",
+  "PB.Vs": "vs",
+  "PB.WeaponTable": "Weapon Table",
+  "PB.WeaponTypeMelee": "Melee",
+  "PB.WeaponTypeRanged": "Ranged",
+  "PB.Wield": "Wield",
+  "PB.WieldAPower": "Wield a Power",
+  "PB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
+  "PB.WieldAPowerFuPBle": "FuPBle - Roll an Arcane Catastrophe.",
+  "PB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
+  "PB.YouAreHit": "You are Hit",
+  "PB.YouHaveNoFeats": "You have no Feats",
+  "PB.YouHaveNoScrolls": "You have no Scrolls"
 }
