first pass on theme

--- a/lang/en.json
+++ b/lang/en.json
@@ -14,7 +14,6 @@
   "PB.actionMacro": "Action Macro",    
   "PB.actionMacroLabel": "Action Label",      
   "PB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
-  "PB.Add": "Add",
   "PB.AllowedScvmClassesEdit": "Edit allowed classes",
   "PB.AllowedScvmClassesSelect": "Select allowed classes",
   "PB.AlternateName": "Alternate Name",
@@ -83,7 +82,6 @@
   "PB.HandedOne": "One-handed",
   "PB.HandedTwo": "Two-handed",
   "PB.Hat": "Hat",
-  "PB.HatUseText": "-1 damage, or break to ignore one attack",  
   "PB.HatTable": "Hat Table",  
   "PB.Heal": "Heal",
   "PB.Hit": "HIT",
@@ -153,8 +151,8 @@
   "PB.Outcome": "Outcome",
   "PB.Party": "Party",
   "PB.PartyInitiative": "Party Initiative",
-  "PB.PerDay": "Per Day",
-  "PB.PerRest": "Per Rest",
+  "PB.PerDay": "per Day",
+  "PB.PerRest": "per Rest",
   "PB.RollMacro": "Roll Macro",
   "PB.Powers": "Powers",
   "PB.PowersPerDayText": "PRE+d4 times per day",
@@ -166,6 +164,7 @@
   "PB.ReactionHelpful": "Helpful",
   "PB.ReactionIndifferent": "Indifferent",
   "PB.ReactionKill": "Kill!",
+  "PB.RegenerateCharacter": "Regenerate Character",  
   "PB.Rest": "Rest",
   "PB.RestDialogDontEat": "Don't eat - Restore no stats.",
   "PB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
@@ -182,6 +181,7 @@
   "PB.RollPartyInitiative": "Roll Party Initiative",
   "PB.Round": "round",
   "PB.Rounds": "rounds",
+  "PB.RuleText": "Rule Text",  
   "PB.ScvmfactoryChooseFromClasses": "Choose from Classes",
   "PB.ScvmfactoryMakeScvm": "Make Scvm",
   "PB.ScvmfactoryToggleAll": "Toggle All",
