Add Powers tabs, more bug fixes and more rules implemented

--- a/lang/en.json
+++ b/lang/en.json
@@ -50,7 +50,6 @@
   "PB.CreatureArmor": "Armor",
   "PB.CreatureAttack": "Attack",
   "PB.CreatureSpecial": "Special",
-  "PB.CriticalSuccess": "Critical Success",
   "PB.Damage": "damage",
   "PB.DamageDie": "Damage Die",
   "PB.DamageReduction": "Damage Reduction",
@@ -70,9 +69,13 @@
   "PB.EquipAWeaponToAttack": "Equip a weapon to attack.",
   "PB.Equipment": "Equipment",
   "PB.ExtraResourceUse": "Use Extra Resource",
-  "PB.ExtraResourceLabel": "Extra Resource Label",
+  "PB.ExtraResourceType": "Extra Resource Type",
+  "PB.ExtraResourceNameSingular": "Extra Resource Singular Name",
+  "PB.ExtraResourceNamePlural": "Extra Resource Plural Name",
   "PB.ExtraResourceFormula": "Extra Resource Formula",
-  "PB.Failure": "Failure",  
+  "PB.ExtraResourceFormulaLabel": "Extra Resource Formula Label",
+  "PB.ExtraResourceTestFormula": "Extra Resource Test Formula",
+  "PB.ExtraResourceTestFormulaLabel": "Extra Resource Test Formula Label",  
   "PB.FeatureType": "Feature Type",  
   "PB.FlavorText": "Flavor Text",    
   "PB.GetBetter": "Get Better",
@@ -97,6 +100,24 @@
   "PB.InitiativePlayerCharactersBegin": "Player Characters Begin",
   "PB.Is": "is",
   "PB.Inflict": "Inflict",
+  "PB.InvokableRitualCriticalSuccess": "Critical Success",
+  "PB.InvokableRitualFailure": "Failure - Roll a Mystical Mishaps and you can't use that ritual again until dawn.",  
+  "PB.InvokableRitualFumble": "Fumble - Roll a Mystical Mishaps twice and you can't use that ritual again until dawn.",
+  "PB.InvokableRitualFailureButton": "Roll a Mystical Mishap",
+  "PB.InvokableRitualSuccess": "Success",
+
+  "PB.InvokableRelicCriticalSuccess": "Critical Success",
+  "PB.InvokableRelicFailure": "Failure - you are stunned for the next round and that RELIC cannot be used until the next dawn.",  
+  "PB.InvokableRelicFumble": "Fumble - the relic is permanently destroyed or depleted",
+  "PB.InvokableRelicSuccess": "Success",
+
+  "PB.InvokableCriticalSuccess": "Critical Success",
+  "PB.InvokableFailure": "Failure",  
+  "PB.InvokableFumble": "Fumble",
+  "PB.InvokableSuccess": "Success",
+
+  "PB.InvokableTitle": "Invoke {type}",  
+  "PB.Invoke": "Invoke",   
   "PB.Items": "Items",
   "PB.ItemAgilityDRModifier": "Agility DR Modifier",
   "PB.ItemCapacity": "Capacity",
@@ -115,6 +136,7 @@
   "PB.ItemFumbleOn": "Fumble On",
   "PB.ItemHanded": "Handed",
   "PB.ItemInvokableType": "Invokable Type",  
+  "PB.ItemIsEquipment": "Is Equipment?",  
   "PB.ItemName": "Item Name",
   "PB.ItemPrice": "Price",
   "PB.ItemReduceDamage": "Reduce Damage",  
@@ -141,10 +163,13 @@
   "PB.Morale": "Morale",
   "PB.MoraleFlees": "Flees",
   "PB.MoraleSurrenders": "Surrenders",
+  "PB.MysticalMishaps": "Mystical Mishaps",
+  
   "PB.Name": "Name",
   "PB.NoActiveEncounter": "No Active Encounter",
   "PB.NoEffect": "No effect",
-  "PB.NoPowerUsesRemaining": "No Power uses remaining",
+  "PB.NoPowerUsesRemaining": "No Arcane Rituals uses remaining",
+  "PB.NoResourceUsesRemaining": "No {type} uses remaining",
   "PB.Ok": "Ok",
   "PB.Luck": "Devil's Luck",
   "PB.LuckHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
@@ -155,7 +180,7 @@
   "PB.PerRest": "per Rest",
   "PB.RollMacro": "Roll Macro",
   "PB.Powers": "Powers",
-  "PB.PowersPerDayText": "PRE+d4 times per day",
+  "PB.PowersPerDayText": "SPI+d4 times per day",
   "PB.PowerUsesRemaining": "Uses Remaining",
   "PB.Quantity": "Quantity",
   "PB.Reaction": "Reaction",
@@ -174,6 +199,8 @@
   "PB.RestDialogLengthLong": "Long - Full night's sleep. Restore d6 HP, regain Devil's Luck if depleted, regain PRE+d4 Power uses for the day.",
   "PB.RestDialogLengthShort": "Short - Catch your breath, have a drink. Restore d4 HP.",
   "PB.RestDialogStarve": "Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.",
+  "PB.RitualRemaining": "Rituals",
+  "PB.RitualPerday": "SPI+d4 times per day",
   "PB.Roll": "Roll",
   "PB.Rolls": "Rolls",
   "PB.RollFormula": "Roll Formula",
@@ -215,14 +242,14 @@
   "PB.StartingItems": "Starting Items",  
   "PB.StartingRolls": "Starting Rolls",  
   "PB.Starvation": "Starvation",
-  "PB.Success": "Success",
+
   "PB.TabContents": "Contents",
   "PB.TabDescription": "Description",
   "PB.TabDetails": "Details",
   "PB.TabFeatures": "Features",
   "PB.TabHistory": "History",
   "PB.TabPowers": "Powers",
-  "PB.TabEquipment": "Equipement",
+  "PB.TabEquipment": "Equipment",
   "PB.TabCombat": "Combat",
   "PB.Take": "Take",
   "PB.TargetArmor": "Target Armor",
@@ -235,13 +262,8 @@
   "PB.WeaponTable": "Weapon Table",
   "PB.WeaponTypeMelee": "Melee",
   "PB.WeaponTypeRanged": "Ranged",
-  "PB.Wield": "Wield",
-  "PB.WieldAPower": "Wield a Power",
-  "PB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
-  "PB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
-  "PB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
   "PB.YouAreHit": "You are Hit",
   "PB.YouHaveNoFeatures": "You have no Features",
-  "PB.YouHaveNoScrolls": "You have no Scrolls",
+  "PB.YouHaveNoUsableItems": "You have no usable items",
   "PB.YouOwn": "You own {item}"  
 }
