Add Relics and Rituals tab, move class specifics feature and invokable to the features tab

--- a/lang/en.json
+++ b/lang/en.json
@@ -179,7 +179,7 @@
   "PB.PerDay": "per Day",
   "PB.PerRest": "per Rest",
   "PB.RollMacro": "Roll Macro",
-  "PB.Powers": "Powers",
+  "PB.Powers": "Relics & Rituals",
   "PB.PowersPerDayText": "SPI+d4 times per day",
   "PB.PowerUsesRemaining": "Uses Remaining",
   "PB.Quantity": "Quantity",
