Change tab menu, fix monster sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -234,9 +234,10 @@
   "PB.SettingsWhiteOnPinkWhite": "White on pink (white)",
   "PB.SettingsTrackAmmo": "Track Ammo",
   "PB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
-  "PB.SheetClassCharacter": "Default Mork Borg Character Sheet",
-  "PB.SheetClassContainer": "Default Mork Borg Container Sheet",
-  "PB.SheetClassCreature": "Default Mork Borg Creature Sheet",
+  "PB.SheetClassCharacter": "Default Pirate Borg Character Sheet",
+  "PB.SheetClassContainer": "Default Pirate Borg Container Sheet",
+  "PB.SheetClassCreature": "Default Pirate Borg Creature Sheet",
+  "PB.SheetItem": "Default Pirate Borg Item Sheet",
   "PB.Silver": "Silver",
   "PB.StandsFirm": "Stands firm",  
   "PB.Starting": "Starting",  
