More system rules

--- a/lang/en.json
+++ b/lang/en.json
@@ -29,6 +29,8 @@
   "PB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
   "PB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
   "PB.Base": "Base",
+  "PB.BaseClass": "Base Class",
+  "PB.BaseClassRequired": "Base Class Required",
   "PB.Broken": "Broken",
   "PB.BrokenFallUnconscious": "Fall unconscious for {rounds} {roundsWord}, awaken with {hp} HP.",
   "PB.BrokenLostEye": "Lost eye. Can't act for {rounds} {roundsWord} then become active with {hp} HP.",
@@ -138,6 +140,7 @@
   "PB.ItemHanded": "Handed",
   "PB.ItemInvokableType": "Invokable Type",
   "PB.ItemIsEquipment": "Is Equipment?",
+  "PB.ItemIsGunpowderWeapon": "Use gunpowder",
   "PB.ItemName": "Item Name",
   "PB.ItemPrice": "Price",
   "PB.ItemReduceDamage": "Reduce Damage",
@@ -168,6 +171,7 @@
 
   "PB.Name": "Name",
   "PB.NoActiveEncounter": "No Active Encounter",
+  "PB.NoAmmoEquipped": "No Ammo equipped, this weapons required ammo.",
   "PB.NoEffect": "No effect",
   "PB.NoPowerUsesRemaining": "No Arcane Rituals uses remaining",
   "PB.NoResourceUsesRemaining": "No {type} uses remaining",
@@ -239,6 +243,7 @@
   "PB.SheetClassCreature": "Default Pirate Borg Creature Sheet",
   "PB.SheetItem": "Default Pirate Borg Item Sheet",
   "PB.Silver": "Silver",
+  "PB.SkipCharacterGenerator": "Skip Character Generator",
   "PB.StandsFirm": "Stands firm",
   "PB.Starting": "Starting",
   "PB.StartingBonusItemInvalid": "Item must exist in a compendium pack to be able to be used as a starting bonus item.",
