Add system support for base classes, add Haunted soul

--- a/lang/en.json
+++ b/lang/en.json
@@ -13,6 +13,7 @@
   "PB.AbilitySpiritAbbrev": "SPI",
   "PB.actionMacro": "Action Macro",
   "PB.actionMacroLabel": "Action Label",
+  "PB.ActorBaseClassWarning": "Warning: this class doesn't require a base class",
   "PB.ActorNotInEncounter": "This actor isn't part of the current combat encounter",
   "PB.AllowedScvmClassesEdit": "Edit allowed classes",
   "PB.AllowedScvmClassesSelect": "Select allowed classes",
@@ -72,7 +73,6 @@
   "PB.EquipAWeaponToAttack": "Equip a weapon to attack.",
   "PB.Equipment": "Equipment",
   "PB.ExtraResourceUse": "Use Extra Resource",
-  "PB.ExtraResourceType": "Extra Resource Type",
   "PB.ExtraResourceNameSingular": "Extra Resource Singular Name",
   "PB.ExtraResourceNamePlural": "Extra Resource Plural Name",
   "PB.ExtraResourceFormula": "Extra Resource Formula",
@@ -217,10 +217,11 @@
   "PB.Rounds": "rounds",
   "PB.RuleText": "Rule Text",
   "PB.ScvmfactoryChooseFromClasses": "Choose from Classes",
-  "PB.ScvmfactoryMakeScvm": "Make Scvm",
+  "PB.ScvmfactoryMakeScvm": "Make Pirate",
   "PB.ScvmfactoryToggleAll": "Toggle All",
   "PB.ScvmfactoryToggleNone": "Toggle None",
-  "PB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Scvm? WARNING: This cannot be undone!",
+  "PB.ScvmfactoryWarning": "Destroy this character, and replace it with a new Pirate? WARNING: This cannot be undone!",
+  "PB.ScvmfactoryWarningBaseClass": "* Require at least one class without a * selected.",
   "PB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
   "PB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
   "PB.SettingsBlackletter": "Blackletter",
@@ -243,7 +244,7 @@
   "PB.SheetClassCreature": "Default Pirate Borg Creature Sheet",
   "PB.SheetItem": "Default Pirate Borg Item Sheet",
   "PB.Silver": "Silver",
-  "PB.SkipCharacterGenerator": "Skip Character Generator",
+  "PB.CharacterGeneratorMacro": "Character Generator Macro",
   "PB.StandsFirm": "Stands firm",
   "PB.Starting": "Starting",
   "PB.StartingBonusItemInvalid": "Item must exist in a compendium pack to be able to be used as a starting bonus item.",
@@ -264,7 +265,7 @@
   "PB.Take": "Take",
   "PB.TargetArmor": "Target Armor",
   "PB.Test": "Test",
-  "PB.TheScvmfactory": "The Scvmfactory",
+  "PB.TheScvmfactory": "The Pirate Factory",
   "PB.Tier": "Tier",
   "PB.Title": "MÖRK BORG",
   "PB.Type": "Type",
