Bug fixes, text update, font update

--- a/lang/en.json
+++ b/lang/en.json
@@ -81,7 +81,7 @@
   "PB.ExtraResourceTestFormulaLabel": "Extra Resource Test Formula Label",
   "PB.FeatureType": "Feature Type",
   "PB.FlavorText": "Flavor Text",
-  "PB.GetBetter": "Get Better",
+  "PB.GetBetter": "Gain Experience",
   "PB.GettingBetterClassFeatures": "You gain the following",
   "PB.GettingBetterMacro": "Getting Better Macro",
   "PB.GettingBetterRolls": "Getting Better Rolls",
@@ -119,8 +119,10 @@
   "PB.InvokableFumble": "Fumble",
   "PB.InvokableSuccess": "Success",
 
-  "PB.InvokableTitle": "Invoke {type}",
-  "PB.Invoke": "Invoke",
+  "PB.InvokableTitle": "Cast {type}",
+  "PB.Invoke": "Cast",
+  "PB.InvokeRitual": "Cast Ritual",
+  "PB.InvokeRelic": "Use Relic",
   "PB.Items": "Items",
   "PB.ItemAgilityDRModifier": "Agility DR Modifier",
   "PB.ItemCapacity": "Capacity",
@@ -173,7 +175,7 @@
   "PB.NoActiveEncounter": "No Active Encounter",
   "PB.NoAmmoEquipped": "No Ammo equipped, this weapons required ammo.",
   "PB.NoEffect": "No effect",
-  "PB.NoPowerUsesRemaining": "No Arcane Rituals uses remaining",
+  "PB.NoPowerUsesRemaining": "No Arcane Ritual uses remaining",
   "PB.NoResourceUsesRemaining": "No {type} uses remaining",
   "PB.Ok": "Ok",
   "PB.Luck": "Devil's Luck",
@@ -186,7 +188,7 @@
   "PB.PirateBorg": "PIRATE BORG",
   "PB.RollMacro": "Roll Macro",
   "PB.Powers": "Relics & Rituals",
-  "PB.PowersPerDayText": "SPI+d4 times per day",
+  "PB.PowersPerDayText": "SPIRIT+d4 times per day",
   "PB.PowerUsesRemaining": "Uses Remaining",
   "PB.Quantity": "Quantity",
   "PB.Reaction": "Reaction",
@@ -208,7 +210,7 @@
   "PB.RestDialogStarve": "No food or drink: restore 0 HP. After two days of starving: lose d4 HP per day",
 
   "PB.RitualRemaining": "Rituals",
-  "PB.RitualPerday": "SPI+d4 times per day",
+  "PB.RitualPerday": "SPIRIT+d4 times per day",
   "PB.Roll": "Roll",
   "PB.Rolls": "Rolls",
   "PB.RollFormula": "Roll Formula",
