Add buttons to roll relics and rituals

--- a/lang/en.json
+++ b/lang/en.json
@@ -104,14 +104,13 @@
   "PB.Is": "is",
   "PB.Inflict": "Inflict",
   "PB.InvokableRitualCriticalSuccess": "Critical Success",
-  "PB.InvokableRitualFailure": "Failure - Roll a Mystical Mishaps and you can't use that ritual again until dawn.",
-  "PB.InvokableRitualFumble": "Fumble - Roll a Mystical Mishaps twice and you can't use that ritual again until dawn.",
-  "PB.InvokableRitualFailureButton": "Roll a Mystical Mishap",
+  "PB.InvokableRitualFailure": "Roll Mystical Mishaps and you can't use that ritual again until dawn.",
+  "PB.InvokableRitualFailureButton": "Roll Mystical Mishaps",
   "PB.InvokableRitualSuccess": "Success",
 
   "PB.InvokableRelicCriticalSuccess": "Critical Success",
-  "PB.InvokableRelicFailure": "Failure - you are stunned for the next round and that RELIC cannot be used until the next dawn.",
-  "PB.InvokableRelicFumble": "Fumble - the relic is permanently destroyed or depleted",
+  "PB.InvokableRelicFailure": "you are stunned for the next round and that RELIC cannot be used until the next dawn.",
+  "PB.InvokableRelicFumble": "the relic is permanently destroyed or depleted",
   "PB.InvokableRelicSuccess": "Success",
 
   "PB.InvokableCriticalSuccess": "Critical Success",
@@ -123,6 +122,7 @@
   "PB.Invoke": "Cast",
   "PB.InvokeRitual": "Cast Ritual",
   "PB.InvokeRelic": "Use Relic",
+  "PB.TestRelic": "Test Relic",
   "PB.Items": "Items",
   "PB.ItemAgilityDRModifier": "Agility DR Modifier",
   "PB.ItemCapacity": "Capacity",
